fixed implementation of new identity